# agimus-demos

./: .pre-commit-config.yaml
agimus_demo_00_franka_controller/config/: joint_impedance_controller_params.yaml
agimus_demo_00_franka_controller/launch/: bringup.launch.py
agimus_demo_01_lfc_alone/: CMakeLists.txt
agimus_demo_01_lfc_alone/launch/: bringup.launch.py
agimus_demo_02_simple_pd_plus/config/: pd_plus_controller_params.yaml
agimus_demo_02_simple_pd_plus/launch/: bringup.launch.py
agimus_demo_03_mpc_dummy_traj/: README.md  dependencies.repos  package.xml
agimus_demo_03_mpc_dummy_traj/config/: agimus_controller_params.yaml  lfc_params.yaml
agimus_demo_03_mpc_dummy_traj/launch/: bringup.launch.py
agimus_demo_03_mpc_dummy_traj/urdf/: obstacles.xacro
agimus_demos_common/: CMakeLists.txt  README.md  package.xml  setup.cfg
agimus_demos_common/agimus_demos_common/: launch_utils.py  set_robot_description_node.py  wait_for_non_zero_joints_node.py
agimus_demos_common/config/: franka_controllers.yaml  gz_bridge.yaml  linear_feedback_controller_params.yaml
agimus_demos_common/launch/: franka_common.launch.py  franka_common_lfc.launch.py  franka_hardware.launch.py  franka_simulation.launch.py
agimus_demos_common/rviz/: franka_preview.rviz
deprecated/pick_and_place/: controller_configs.yaml  plotjuggler_jsid.xml
